tests/include.tex
\documentclass{article}

\begin{document}

\barone
\include{included}
\bartwo
\include{included}
\barthree

\end{document}
